--- a/src/presentation/styles/global.scss
+++ b/src/presentation/styles/global.scss
@@ -17,7 +17,7 @@ input[type='email'] {
   border: 1px solid $primaryLight;
   line-height: 40px;
   border-radius: 4px;
-  margin: 10px 0;
+  margin: 10px 0 0 0;
   padding-left: 10px;
 
   &:focus {
