--- a/src/presentation/components/errorWrap/errorWrap-styles.scss
+++ b/src/presentation/components/errorWrap/errorWrap-styles.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
 
-  .ellipsis {
+  .loader {
     color: $primaryLight;
     font-size: 30px;
     align-self: center;
