--- a/src/presentation/components/errorWrap/errorWrap-styles.scss
+++ b/src/presentation/components/errorWrap/errorWrap-styles.scss
@@ -12,8 +12,9 @@
   }
 
   .error {
+    margin-top: 10px;
     color: red;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 700;
   }
 }
